--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+  name="description"
+  content="ArcoDali ofrece pulpas naturales y bebidas artesanales elaboradas con fruta real. Calidad, sabor y puntualidad en cada entrega en Costa Rica."
+/>
+
     />
 <link rel="icon" href="%PUBLIC_URL%/propuesta-logo.png" />
     <!--
