--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-CR">
   <head>
-    <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/propuesta-logo" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1F5B2E" />
+
+    <!-- ===== SEO ===== -->
+    <title>Distribuidora ARCODALI | Pulpas Naturales y Jugos en Costa Rica</title>
+
     <meta
-  name="description"
-  content="ArcoDali ofrece pulpas naturales y bebidas artesanales elaboradas con fruta real. Calidad, sabor y puntualidad en cada entrega en Costa Rica."
-/>
+      name="description"
+      content="Distribuidora ARCODALI de Costa Rica. Pulpas naturales, jugos cítricos y bebidas especiales. Calidad premium, excelente rendimiento y entregas puntuales en todo el GAM y mas!"
+    />
 
-  
-<link rel="icon" href="%PUBLIC_URL%/propuesta-logo.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-<link rel="apple-touch-icon" href="%PUBLIC_URL%/propuesta-logo.png" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <!-- ===== Favicon (TU LOGO) ===== -->
+    <link rel="icon" href="%PUBLIC_URL%/propuesta-logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/propuesta-logo.png" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>ArcoDali</title>
+    <!-- ===== PWA ===== -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- ===== Open Graph (WhatsApp / Facebook) ===== -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Distribuidora ARCODALI" />
+    <meta
+      property="og:description"
+      content="Pulpas naturales, jugos cítricos y bebidas especiales en Costa Rica. Calidad y puntualidad en cada entrega."
+    />
+    <meta property="og:image" content="https://arcodali.com/propuesta-logo.png" />
+    <meta property="og:url" content="https://arcodali.com" />
+
+    <!-- ===== Twitter ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Necesitás habilitar JavaScript para ver este sitio.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
